//
//  ProfileModel.swift
//  ImageFeed
//
//  Created by Timur Lavrukhin on 12.5.2025.
//

struct ProfileModel {
    let userID: String
    let username: String
    let loginname: String
    let firstName: String
    let lastName: String
    let name: String
    let bio: String
    let totalPhotos: Int
}
