...
                                    <constraint firstAttribute="height" constant="60" id="bbX-95-QmJ"/>
                                    <constraint firstAttribute="width" constant="60" id="jWk-IV-0DF"/>
                                </constraints>
                            </imageView>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="te8-80-jjo" userLabel="LoginButton">
                                <rect key="frame" x="16" y="680" width="361" height="48"/>
                                <accessibility key="accessibilityConfiguration" identifier="Authenticate"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="48" id="DIb-m5-x2d"/>
                                </constraints>
                                <state key="normal" title="Button"/>
                                <buttonConfiguration key="configuration" style="plain" title="Войти">
                                    <backgroundConfiguration key="background">
...
                                <connections>
                                    <outlet property="delegate" destination="2EF-gA-cY9" id="spz-2u-Anf"/>
                                </connections>
                            </scrollView>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="gHs-lj-xUF" userLabel="Back Button">
                                <rect key="frame" x="8" y="8" width="48" height="48"/>
                                <accessibility key="accessibilityConfiguration" identifier="SingleImageBackButton"/>
                                <constraints>
                                    <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="48" id="Ue7-Bh-jyf"/>
                                    <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="48" id="fcz-Py-Gpn"/>
                                </constraints>
                                <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
                                <state key="normal" image="BackButton"/>
...
